--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "angualrjs-seed",
   "description": "A starter project for angular js",
   "devDependencies": {
-        "phantomjs" : "*",
-        "karma" : "*",
-        "karma-junit-reporter" : "*",    
-        "karma-jasmine" : "*",
-        "karma-ng-scenario" : "*"
-    }
+    "phantomjs": "*",
+    "karma": "~0.10.2",
+    "karma-junit-reporter": "~0.1.0",
+    "karma-jasmine": "~0.1.3",
+    "karma-ng-scenario": "*",
+    "karma-script-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.0",
+    "karma-firefox-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-requirejs": "~0.1.0",
+    "karma-coffee-preprocessor": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.0"
+  }
 }
