--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "angualrjs-seed",
-  "description": "A starter project for angular js",
+  "name": "halbton",
+  "description": "halbton",
   "devDependencies": {
     "phantomjs": "*",
     "karma": "~0.10.2",
     "karma-junit-reporter": "~0.1.0",
     "karma-jasmine": "~0.1.3",
-    "karma-ng-scenario": "*",
+    "karma-ng-scenario": "~0.1.0",
     "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.0",
     "karma-firefox-launcher": "~0.1.0",
