--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "engines": {
     "node": "0.10.x",
-    "npm":  "1.2.x"
+    "npm": "1.2.x"
   },
-
+  "dependencies": {
+    "express": "3.x"
+  },
   "devDependencies": {
     "phantomjs": "*",
     "karma": "~0.10.2",
