--- a/.jshintrc
+++ b/.jshintrc
@@ -11,19 +11,38 @@
   "boss": true,
   "eqnull": true,
   "node": true,
-  "es5": true,
   "strict": true,
   "indent": 2,
   "white": true,
   "trailing": true,
   "expr": true,
   "globals": {
-    "describe": true,
-    "expect": true,
-    "it": true,
-    "before": true,
-    "after": true,
-    "beforeEach": true,
-    "afterEach": true
+    "angular": true,
+    "_": true,
+    "$": true,
+    "requirejs": true,
+    "document": true,
+    "define": true,
+    "window": true,
+    "host": true,
+    "select":true,
+    "input":true,
+    "repeater":true,
+    "browser":true,
+    "toMatch":true,
+    "element":true,
+    "describe": false,
+    "xdescribe": false,
+    "it": false,
+    "xit": false,
+    "expect": false,
+    "beforeEach": false,
+    "afterEach": false,
+    "spyOn": false,
+    "inject": false,
+    "url": false,
+    "jasmine": false,
+    "sinon": false,
+    "Globalize": false
   }
 }
