--- a/package.json
+++ b/package.json
@@ -24,6 +24,14 @@
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-requirejs": "~0.1.0",
     "karma-coffee-preprocessor": "~0.1.0",
-    "karma-phantomjs-launcher": "~0.1.0"
+    "karma-phantomjs-launcher": "~0.1.0",
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-karma": "~0.4.4",
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-concurrent": "~0.2.0",
+    "grunt-develop": "~0.2.0",
+    "requirejs": "2.1.x"
   }
 }
