--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "grunt-karma": "~0.4.4",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-watch": "~0.4.4",
-    "grunt-concurrent": "~0.2.0",
-    "grunt-develop": "~0.2.0",
-    "requirejs": "2.1.x"
+    "grunt-concurrent": "~0.4.0"
+
   }
 }
