--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "grunt-karma": "~0.4.4",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-watch": "~0.4.4",
-    "grunt-concurrent": "~0.4.0"
+    "grunt-concurrent": "~0.4.0",
+    "grunt-express": "~1.0.0"
 
   }
 }
